--- a/FinalProject/AdminApplication/Views/Admin/GetAllProducts.cshtml
+++ b/FinalProject/AdminApplication/Views/Admin/GetAllProducts.cshtml
@@ -66,7 +66,7 @@
                                 <td style="vertical-align:middle;">@item.DacDiem</td>
                                 <td style="vertical-align:middle;">@item.MoTa</td>
                                 <td style="vertical-align:middle;">@item.TrangThai</td>
-                                <td style="vertical-align:middle;">@item.HinhAnh</td>
+                                <td style="vertical-align:middle;"><img src="~/images/@item.HinhAnh" style="height:50px;width:50px;"></td>
                                 <td style="vertical-align:middle;">@item.NgayNhap</td>
                                 <td style="vertical-align:middle;text-align:center;">
                                     @Html.ActionLink("Show","GetAllProductRates",new{id = item.MaSp})
