--- a/FinalProject/AdminApplication/Views/Shared/SideBarView.cshtml
+++ b/FinalProject/AdminApplication/Views/Shared/SideBarView.cshtml
@@ -5,7 +5,7 @@
                 <div class="sidebar-brand-icon rotate-n-15">
                     <i class="fas fa-laugh-wink"></i>
                 </div>
-                <div class="sidebar-brand-text mx-3"> Quản Lý <sup>2</sup></div>
+                <div class="sidebar-brand-text mx-3"> Quản Lý Bao Cao Su</div>
             </a>
 
             <!-- Divider -->
@@ -20,16 +20,16 @@
                 </a>
             </li>
 
-            <!-- Divider -->
+          @*  <!-- Divider -->
             <hr class="sidebar-divider">
 
             <!-- Heading -->
             <div class="sidebar-heading">
                 Interface
-            </div>
+            </div>*@
 
             <!-- Nav Item - Pages Collapse Menu -->
-            <li class="nav-item">
+            @*<li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
                    aria-expanded="true" aria-controls="collapseTwo">
                     <i class="fas fa-fw fa-cog"></i>
@@ -42,10 +42,10 @@
                         <a class="collapse-item" href="~/cards.html">Cards</a>
                     </div>
                 </div>
-            </li>
+            </li>*@
 
             <!-- Nav Item - Utilities Collapse Menu -->
-            <li class="nav-item">
+           @* <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
                    aria-expanded="true" aria-controls="collapseUtilities">
                     <i class="fas fa-fw fa-wrench"></i>
@@ -61,43 +61,43 @@
                         <a class="collapse-item" href="~/utilities-other.html">Other</a>
                     </div>
                 </div>
-            </li>
+            </li>*@
 
             <!-- Divider -->
             <hr class="sidebar-divider">
 
             <!-- Heading -->
-            <div class="sidebar-heading">
+            @*<div class="sidebar-heading">
                 Addons
-            </div>
+            </div>*@
 
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages"
                    aria-expanded="true" aria-controls="collapsePages">
                     <i class="fas fa-fw fa-folder"></i>
-                    <span>Pages</span>
+                    <span>Trang Quản Lí</span>
                 </a>
                 <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
 
-                        <h6 class="collapse-header">Product Management:</h6>
-                        <a class="collapse-item" href="~/admin/getallproducts">Show All Products</a>
-                        <a class="collapse-item" href="~/admin/addproduct">Add Product</a>
+                        <h6 class="collapse-header">Quản Lí Sản Phẩm:</h6>
+                        <a class="collapse-item" href="~/admin/getallproducts">Xem Sản Phẩm</a>
+                        <a class="collapse-item" href="~/admin/addproduct">Thêm Sản Phẩm</a>
                         <div class="collapse-divider"></div>
 
-                        <h6 class="collapse-header">Category Management:</h6>
-                        <a class="collapse-item" href="~/admin/getallcategories">Show All Categories</a>
-                        <a class="collapse-item" href="~/admin/addcategory">Add Category</a>
+                        <h6 class="collapse-header">Quản Lí Danh Mục:</h6>
+                        <a class="collapse-item" href="~/admin/getallcategories">Xem Danh Mục</a>
+                        <a class="collapse-item" href="~/admin/addcategory">Thêm Danh Mục</a>
                         <div class="collapse-divider"></div>
 
-                        <h6 class="collapse-header">UserAccount Management:</h6>
-                        <a class="collapse-item" href="~/admin/getAllCustomers">Show All Customers</a>
+                        <h6 class="collapse-header">Quản Lí Khách Hàng:</h6>
+                        <a class="collapse-item" href="~/admin/getAllCustomers">Xem Khách Hàng</a>
 
-                        <h6 class="collapse-header">Bill Management:</h6>
-                        <a class="collapse-item" href="~/admin/getAllBills">Show All Bills</a>
+                        <h6 class="collapse-header">Quản Lí Đơn Hàng:</h6>
+                        <a class="collapse-item" href="~/admin/getAllBills">Xem Hóa Đơn</a>
 
-                        <h6 class="collapse-header">Login Screens:</h6>
+                    @*    <h6 class="collapse-header">Login Screens:</h6>
                         <a class="collapse-item" href="~/login.html">Login</a>
                         <a class="collapse-item" href="~/register.html">Register</a>
                         <a class="collapse-item" href="~/forgot-password.html">Forgot Password</a>
@@ -106,7 +106,7 @@
                         <h6 class="collapse-header">Other Pages:</h6>
                         <a class="collapse-item" href="~/404.html">404 Page</a>
                         <a class="collapse-item" href="~/blank.html">Blank Page</a>
-                        <div class="collapse-divider"></div>
+                        <div class="collapse-divider"></div>*@
 
 
                         <div class="collapse-divider"></div>
@@ -115,35 +115,35 @@
             </li>
 
             <!-- Nav Item - Charts -->
-            <li class="nav-item">
+            @*<li class="nav-item">
                 <a class="nav-link" href="~/charts.html">
                     <i class="fas fa-fw fa-chart-area"></i>
                     <span>Charts</span>
                 </a>
-            </li>
+            </li>*@
 
             <!-- Nav Item - Tables -->
-            <li class="nav-item">
+            @*<li class="nav-item">
                 <a class="nav-link" href="~/tables.html">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Tables</span>
                 </a>
-            </li>
+            </li>*@
 
             <!-- Divider -->
-            <hr class="sidebar-divider d-none d-md-block">
+         @*   <hr class="sidebar-divider d-none d-md-block">*@
 
             <!-- Sidebar Toggler (Sidebar) -->
-            <div class="text-center d-none d-md-inline">
+     @*       <div class="text-center d-none d-md-inline">
                 <button class="rounded-circle border-0" id="sidebarToggle"></button>
-            </div>
+            </div>*@
 
             <!-- Sidebar Message -->
-            <div class="sidebar-card d-none d-lg-flex">
+         @*   <div class="sidebar-card d-none d-lg-flex">
                 <img class="sidebar-card-illustration mb-2" src="~/img/undraw_rocket.svg" alt="...">
                 <p class="text-center mb-2"><strong>SB Admin Pro</strong> is packed with premium features, components, and more!</p>
                 <a class="btn btn-success btn-sm" href="https://startbootstrap.com/theme/sb-admin-pro">Upgrade to Pro!</a>
-            </div>
+            </div>*@
 
         </ul>
       
