--- a/FinalProject/CustomerApplication/Views/Shopping/ThanhToan.cshtml
+++ b/FinalProject/CustomerApplication/Views/Shopping/ThanhToan.cshtml
@@ -1,19 +1,19 @@
 ﻿@model CustomerApplication.Models.DonHang
 <style>
     /*.bd-placeholder-img {
-            font-size: 1.125rem;
-            text-anchor: middle;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            -ms-user-select: none;
-            user-select: none;
-          }
+                                        font-size: 1.125rem;
+                                        text-anchor: middle;
+                                        -webkit-user-select: none;
+                                        -moz-user-select: none;
+                                        -ms-user-select: none;
+                                        user-select: none;
+                                      }
 
-          @@media (min-width: 768px) {
-            .bd-placeholder-img-lg {
-              font-size: 3.5rem;
-            }
-          }*/
+                                      @@media (min-width: 768px) {
+                                        .bd-placeholder-img-lg {
+                                          font-size: 3.5rem;
+                                        }
+                                      }*/
 </style>
 <!-- Custom styles for this template -->
 <link href="~/css/thanhtoan.css" rel="stylesheet">
@@ -30,7 +30,7 @@
                     @*<span class="badge badge-secondary badge-pill">3</span>*@
                 </h4>
                 <ul class="list-group mb-3">
-             @*       @foreach (var item in ViewBag.Cart)
+                    @foreach (var item in ViewBag.Cart)
                     {
                         <li class="list-group-item d-flex justify-content-between lh-condensed">
                             <div>
@@ -43,7 +43,7 @@
                         </li>
 
 
-                    }*@
+                    }
                     <li class="list-group-item d-flex justify-content-between">
                         <span>Tổng Tiền</span>
                         <strong> @ViewBag.TongTien</strong>
@@ -56,10 +56,12 @@
                 <h4 class="mb-3">THÔNG TIN</h4>
                 @using (Html.BeginForm("ThanhToan", "Shopping", FormMethod.Post, new { @class = "needs-validation" }))
                 {
+                    @Html.ValidationSummary(true,"",new { @class = "text-danger" })
                     <div class="row">
                         <div class="col-md-6 mb-3">
                             <label for="firstName">Họ và tên</label>
                             <input name="s_name" type="text" class="form-control" id="firstName" placeholder="" value="" required>
+
                             <div class="invalid-feedback">
                                 Valid first name is required.
                             </div>
@@ -69,15 +71,7 @@
 
                     <div class="mb-3">
                         <label for="email">Email <span class="text-muted"></span></label>
-                        <input name="s_email" type="email" class="form-control" id="email" placeholder="you@gmail.com">
-                        <div class="invalid-feedback">
-                            Please enter a valid email address for shipping updates.
-                        </div>
-                    </div>
-
-                    <div class="mb-3">
-                        <label for="password">Password<span class="text-muted"></span></label>
-                        <input name="s_pass" type="password" class="form-control" id="password" placeholder="Password">
+                        <input name="s_email" type="email" class="form-control" id="email" placeholder="you@gmail.com" required>
                         <div class="invalid-feedback">
                             Please enter a valid email address for shipping updates.
                         </div>
@@ -85,9 +79,9 @@
 
                     <div class="mb-3">
                         <label for="phone">Số điện thoại <span class="text-muted"></span></label>
-                        <input name="s_phone" type="text" class="form-control" id="phone">
+                        <input name="s_phone" type="text" class="form-control" id="phone" required>
                         <div class="invalid-feedback">
-                            Please enter a valid email address for shipping updates.
+                            Please enter a valid phone.
                         </div>
                     </div>
 
@@ -95,13 +89,16 @@
                         <label for="address">Địa chỉ</label>
                         <input name="s_dc" type="text" class="form-control" id="address" placeholder="Số nhà, đường, ..." required>
                         <div class="invalid-feedback">
-                            Please enter your shipping address.
+                            Please enter your address.
                         </div>
                     </div>
 
                     <div class="mb-3">
                         <label for="address2">Địa chỉ giao <span class="text-muted">(Optional)</span></label>
-                        <input name="s_dcg" type="text" class="form-control" id="address2">
+                        <input name="s_dcg" type="text" class="form-control" id="address2" required>
+                        <div class="invalid-feedback">
+                            Please enter your shipping address.
+                        </div>
                     </div>
 
                     <hr class="mb-4">
@@ -109,35 +106,40 @@
                     <h4 class="mb-3">Phương thức thanh toán</h4>
 
                     <div class="d-block my-3">
-                       @* <div class="custom-control custom-radio">
-                            <input name="s_ttd" id="credit" type="radio" class="custom-control-input" checked required>
-                            <label class="custom-control-label" for="credit">Thẻ tín dụng</label>
-                        </div>
-                        <div class="custom-control custom-radio">
-                            <input name="s_cod" id="debit" type="radio" class="custom-control-input" required>
-                            <label class="custom-control-label" for="debit">COD</label>
-                        </div>*@
+                        @*     <div class="custom-control custom-radio">
+                    <input name="s_ttd" id="credit" type="radio" class="custom-control-input" checked required>
+                    <label class="custom-control-label" for="credit">Thẻ tín dụng</label>
+                    </div>
+                    <div class="custom-control custom-radio">
+                    <input name="s_cod" id="debit" type="radio" class="custom-control-input" required>
+                    <label class="custom-control-label" for="debit">COD</label>
+                    </div>*@
 
                         @Html.DropDownListFor(x => x.PhuongThucTt,
                     new SelectList(ViewBag.PartialTypes, "Value", "Text"),
                     new { @class = "custom-control custom-radio"})
-                    <br>
-                    <div class="row">
-                        <div class="col-md-6 mb-3">
-                            <label for="cc-name">Ngân hàng nhận</label>
-                            <input name="s_nh" type="text" class="form-control" id="cc-name" placeholder="" required>
-                       @* <div class="invalid-feedback">
-                            Name on card is required
-                        </div>*@
+                        <br>
+
+
+
+                        <div class="row">
+                            <div class="col-md-6 mb-3">
+                                <label for="cc-name">Ngân hàng nhận</label>
+
+                                @Html.DropDownListFor(x => x.NganHangNhan,
+                            new SelectList(ViewBag.bTypes, "Value", "Text"),
+                            new { @class="form-control", @id="cc-name" })
+
+                            </div>
+                            <div class="col-md-6 mb-3">
+                                <label for="cc-number">Số thẻ</label>
+                                <input name="s_st" type="text" class="form-control" id="cc-number" placeholder="">
+                               @* <div class="invalid-feedback">
+                                    Credit card number is required
+                                </div>*@
+                            </div>
                         </div>
-                        <div class="col-md-6 mb-3">
-                            <label for="cc-number">Số thẻ</label>
-                            <input name="s_st" type="text" class="form-control" id="cc-number" placeholder="" required>
-                            @*<div class="invalid-feedback">
-                                Credit card number is required
-                            </div>*@
-                        </div>
-                    </div>
+
                     </div>
 
                     <hr class="mb-4">
@@ -151,6 +153,8 @@
 
 
             <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-            <script>window.jQuery || document.write('<script src="/docs/4.3/assets/js/vendor/jquery-slim.min.js"><\/script>')</script><script src="https://getbootstrap.com/docs/4.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script>
+            <script>window.jQuery || document.write('<script src="/docs/4.3/assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
+
+            <script src="https://getbootstrap.com/docs/4.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script>
             <script src="https://getbootstrap.com/docs/4.3/examples/checkout/form-validation.js"></script>
 </body>
